--- a/Functions/GetParentProcessName/GetParentProcessName.vcxproj.filters
+++ b/Functions/GetParentProcessName/GetParentProcessName.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GetParentProcessId.c">
+    <ClCompile Include="GetParentProcessName.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
